example/lib/src/l10n/errors/app_km.arb
{
  "@@locale": "km",
  "error": "មានកំហុសមួយកើតឡើង",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "មានកំហុសមិនគ្រាន់កន្លែងមួយ",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "របាយការណ៍កំហុសត្រូវបានផ្ញើដោយជោគជ័យ។",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}